# sky_rocket_admin

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-06-19-205106_create_users/: up.sql
migrations/2024-06-19-210856_create_groups/: up.sql
migrations/2024-06-19-210942_create_users_groups/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  settings.rs
src/auth/: mod.rs
src/auth/cmd/: mod.rs  superuser.rs
src/auth/models/: groups.rs  mod.rs  user_group.rs  users.rs
src/auth/repositories/: groups.rs  mod.rs  users.rs  users_group.rs
src/auth/routes/: authorization.rs  groups.rs  hello.rs  hi_json.rs  mod.rs  user_group.rs  users.rs
src/auth/services/: auth.rs  crypto.rs  hash.rs  jwt.rs
src/commands/: mod.rs  superuser.rs
src/project/: database.rs  mod.rs
tests/auth/: users.rs
