[package]
name = "sky_rocket_admin"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
rocket = { version = "0.5", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.2", features = ["diesel_postgres"] }
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
bcrypt = "0.15"
validator = "0.18"
validator_derive = "0.18"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"]}
fake = { version = "2.9", features = ["derive"] }